# elastic-script

./: .gitignore  .gitmodules  404.html  CLAUDE.md  README.md  ROADMAP.md  index.html  mkdocs.yml  sitemap.xml
cli/: .gitignore  README.md  requirements.txt  setup.py
docs/: index.md  requirements.txt  roadmap.md  triggers-and-scheduling.md
elastic-script/: build.gradle
functions/: index.html
kibana-plugin/: README.md
notebooks/: 00-complete-reference.ipynb  01-getting-started.ipynb  02-esql-integration.ipynb  03-ai-observability.ipynb  04-async-execution.ipynb  05-runbook-integrations.ipynb  06-scheduled-jobs.ipynb  07-event-triggers.ipynb  08-esql-augmentation.ipynb  08-multinode-testing.ipynb  09-esql-binding.ipynb  10-first-class-commands.ipynb  11-namespaced-functions.ipynb  12-exception-handling.ipynb  12-intelligent-data-applications.ipynb  13-user-defined-functions.ipynb  14-execute-immediate.ipynb  15-map-type.ipynb  16-cursors.ipynb  17-bulk-operations.ipynb  18-intents.ipynb  18-packages.ipynb  19-security-permissions.ipynb  20-profiler.ipynb  21-user-defined-types.ipynb  22-standalone-skills.ipynb  README.md  index.html  requirements.txt
otel-collector/: .gitignore  config.yaml
roadmap/: index.html
scripts/: dev-setup.sh  generate-function-docs.py  quick-start.sh  run-e2e-tests.sh  start-multinode.sh
sdk/: README.md  pyproject.toml  requirements-dev.txt  setup.py
sdk/moltler/: __init__.py  agents.py  client.py  connectors.py  exceptions.py  skills.py
sdk/tests/: __init__.py  test_agents.py  test_client.py  test_connectors.py  test_skills.py
search/: search_index.json
stylesheets/: extra.css
(+401 files in other folders)
